Add results integrity and publishing workflow
- V82: school-safe uniqueness, RESTRICT foreign keys, DRAFT/PUBLISHED result
  status, mark audit columns and optimistic locking
- Admin-only publish/unpublish; students/parents see published results only
- Atomic, fully validated bulk mark save with per-row errors
- One calculation (ResultCalculator) and grading/pass rule (GradingPolicy);
  missing marks are "not entered", ranks per exam/class/section
- Report cards: backend subject/overall grades, draft exams block publish,
  student/parent access and public QR verification
- Teacher scope for exam list and group compute; read-only class overview;
  safe exam/subject deletes

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>